06-services/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector:
    matchLabels:
      app: nginx-deploy
  policyTypes:
    - Ingress
  ingress:
    - from: 
        - podSelector:
            matchLabels:
              acess: granted
